refactor(core): JDK 17 modernization of the core module (#1498)
* refactor(core): apply instanceof patterns and switch expressions on hot paths

why: per-record and per-exception code still used pre-17 idioms: cast-after-
instanceof chains, statement switches with break, and trim().isEmpty() for
blank checks.

what: use instanceof pattern variables (AddaxException, LongColumn,
PerfRecord, NullToDefaultTransformer, GroovyTransformer), arrow switch
expressions (MapTransformer, FilterTransformer, NullToDefaultTransformer,
TaskGroupContainer.generateRunner), and String.isBlank in MathUtil.

impact: identical behavior, less ceremony on the hot path; no preview features
used (type-pattern switch on FilterTransformer's column dispatch is a Java 17
preview and stays untouched).

* refactor(core): parameterize raw map types and modernize date casting

why: ConfigParser used raw List<Map> types, and ColumnCast still used a
statement switch plus Collections.emptyList.

what: parameterize the config lists (bridged via an unchecked helper since
Map.class cannot carry type arguments), convert DateCast.asString to a switch
expression, and use List.of for the empty default.

impact: compile-time type safety for config lists; identical behavior.

* refactor(core): use instanceof patterns, List.of and Files.readString

why: the configuration tree navigators still used cast-after-instanceof and
Arrays.asList; file reads went through commons-io with a default charset.

what: apply instanceof pattern variables in getKeysRecursive,
extractConfiguration and setObjectRecursive; switch split2List to List.of;
replace FileUtils.readFileToString with Files.readString (UTF-8) in
ConfigParser and TransformerUtil; use pattern variables for the YAML
top-level dispatch.

impact: identical behavior; fewer casts and two fewer commons-io call sites;
file reads now use UTF-8 explicitly instead of the platform default charset.

* refactor(core): use text blocks for generated code and log messages

why: 